@@ -75,6 +75,9 @@ production.
   on Special:Version in their own section. Extensions or skins that are
   installed via composer will not be shown in this section as it is assumed
   they will add the proper credits to the skins or extensions section.
+* (T5593) $wgSVGConverter can now be set to 'native' to make web browsers render
+  SVG images directly, thus improving compatibility with high-density screens and
+  avoiding the need for third-party rasterization libraries.
 
 ==== External libraries ====
 * MediaWiki now requires certain external libraries to be installed. In the past
